// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test med saker 1`] = `
<div
  className="dittnav-lenkepanel-container"
>
  
  <div
    className="dittnav-lenkepanel-tokol"
  >
    <div
      className="dittnav-lenkepanel-venstre"
    >
      <a
        alt="Utbetalinger"
        className="lenkepanel dittnav-lenkepanel-liten-item lenkepanel--border"
        href="http://localhost:9222/utbetalingsoversikt"
        onClick={[Function]}
      >
        <span
          className="typo-undertittel lenkepanel__heading"
        >
          Dine utbetalinger
        </span>
        <span
          className="lenkepanel__indikator"
        />
      </a>
      <div
        className="panel oversiktspanel dittnav-lenkepanel-stor"
      >
        <div
          className="oversiktspanel__header"
        >
          <div
            className="oversiktspanel__overskrift"
          >
            <h2
              className="typo-systemtittel"
            >
              Dine siste saker
            </h2>
          </div>
        </div>
        <div
          className="oversiktspanel__liste"
        >
          <div
            className="sak-container"
          >
            <a
              className="lenke sak-lenke"
              href="http://localhost:9222/saksoversikt/tema/BAR"
              id="sak-lenke-id"
              onClick={[Function]}
            >
              <div
                className="sak-temanavn lenke"
              >
                <h2
                  className="typo-undertittel"
                >
                  Barnetrygd
                </h2>
              </div>
              <div
                className="sak-status"
              >
                <p
                  className="typo-undertekst"
                >
                  Sist oppdatert: 
                  15. aug. 2019
                </p>
              </div>
            </a>
          </div>
          <div
            className="sak-container"
          >
            <a
              className="lenke sak-lenke"
              href="http://localhost:9222/saksoversikt/tema/SYK"
              id="sak-lenke-id"
              onClick={[Function]}
            >
              <div
                className="sak-temanavn lenke"
              >
                <h2
                  className="typo-undertittel"
                >
                  Sykepenger og oppfølging
                </h2>
              </div>
              <div
                className="sak-status"
              >
                <p
                  className="typo-undertekst"
                >
                  Du har ti søknader under behandling. 
                  Sist oppdatert: 
                  14. aug. 2019
                </p>
              </div>
            </a>
          </div>
        </div>
        <p
          className="typo-element oversiktspanel__header-lenke"
        >
          <a
            className="lenke"
            href="http://localhost:9222/saksoversikt"
            id="oversiktspanel__header-lenke-id"
          >
            Se alle dine saker (6)
            <span
              className="nav-frontend-chevron chevronboks oversiktspanel__chevron chevron--hoyre"
            />
          </a>
        </p>
      </div>
    </div>
    <div
      className="panel kommunikasjon-flis"
    >
      <h2
        className="typo-systemtittel kommunikasjon-flis-overskrift"
      >
        Kommunikasjon med Nav
      </h2>
      <div
        className="kommunikasjon-flis-element kommunikasjon-flis-innboks"
      >
        <a
          className="lenke kommunikasjon-flis-lenke"
          href="undefined"
        >
          <h2
            className="typo-undertittel"
          >
            <svg
              fill="none"
              height="24"
              style={
                Object {
                  "marginTop": "3px",
                }
              }
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M21.8182 20.3636H2.18182C0.978545 20.3636 0 19.3851 0 18.1818V6.18182C0 4.97855 0.978545 4 2.18182 4H21.8182C23.0215 4 24 4.97855 24 6.18182V18.1818C24 19.3851 23.0215 20.3636 21.8182 20.3636ZM1.14717 5.83571C1.11068 5.94452 1.09091 6.06092 1.09091 6.18182V18.1818C1.09091 18.7829 1.57964 19.2727 2.18182 19.2727H21.8182C22.4204 19.2727 22.9091 18.7829 22.9091 18.1818V6.18182C22.9091 6.06069 22.8892 5.94408 22.8526 5.83508L12.341 14.2444C12.2406 14.323 12.1195 14.3633 11.9995 14.3633C11.8795 14.3633 11.7584 14.323 11.658 14.2444L1.14717 5.83571ZM1.98708 5.1083C2.05028 5.09688 2.11536 5.09091 2.18182 5.09091H21.8182C21.885 5.09091 21.9505 5.09694 22.014 5.1085L11.9995 13.1197L1.98708 5.1083Z"
                fill="#0067C5"
                fillRule="evenodd"
              />
            </svg>
            <span
              className="kommunikasjon-flis-element-tittel"
            >
              Innboks
            </span>
          </h2>
          <p
            className="typo-undertekst"
          >
            Informasjon fra NAV og svar på henvendelser og referater fra samtaler du på telefon, chat og «Skriv til oss».
          </p>
        </a>
      </div>
      
      <div
        className="kommunikasjon-flis-element kommunikasjon-flis-brev-vedtak"
      >
        <a
          className="lenke kommunikasjon-flis-lenke"
          href="undefined"
        >
          <h2
            className="typo-undertittel"
          >
            <svg
              fill="none"
              height="24"
              viewBox="0 0 25 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M23.4334 21H0.633334C0.283734 21 0 20.7163 0 20.3667V2.63333C0 2.28373 0.283734 2 0.633334 2H6.96668C7.13514 2 7.29601 2.06713 7.41508 2.18493L9.76221 4.53334H23.4334C23.783 4.53334 24.0667 4.81707 24.0667 5.16667V20.3667C24.0667 20.7163 23.783 21 23.4334 21ZM1.26623 19.7334H22.7996V5.80007H9.49958C9.33111 5.80007 9.17024 5.73294 9.05118 5.61514L6.70404 3.26673H1.26623V19.7334Z"
                fill="#0067C5"
                fillRule="evenodd"
              />
            </svg>
            <span
              className="kommunikasjon-flis-element-tittel"
            >
              Brev og vedtak
            </span>
          </h2>
          <p
            className="typo-undertekst"
          >
            For deg som ikke har Digipost eller e-Boks.
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot test uten saker 1`] = `
<div
  className="dittnav-lenkepanel-container"
>
  
  <div
    className="dittnav-lenkepanel-tokol"
  >
    <div
      className="dittnav-lenkepanel-venstre"
    >
      <a
        alt="Utbetalinger"
        className="lenkepanel dittnav-lenkepanel-liten-item lenkepanel--border"
        href="http://localhost:9222/utbetalingsoversikt"
        onClick={[Function]}
      >
        <span
          className="typo-undertittel lenkepanel__heading"
        >
          Dine utbetalinger
        </span>
        <span
          className="lenkepanel__indikator"
        />
      </a>
      <a
        alt="Dine saker"
        className="lenkepanel dittnav-lenkepanel-liten-item lenkepanel--border"
        href="http://localhost:9222/saksoversikt"
        onClick={[Function]}
      >
        <span
          className="typo-undertittel lenkepanel__heading"
        >
          Dine saker
        </span>
        <span
          className="lenkepanel__indikator"
        />
      </a>
    </div>
    <div
      className="panel kommunikasjon-flis"
    >
      <h2
        className="typo-systemtittel kommunikasjon-flis-overskrift"
      >
        Kommunikasjon med Nav
      </h2>
      <div
        className="kommunikasjon-flis-element kommunikasjon-flis-innboks"
      >
        <a
          className="lenke kommunikasjon-flis-lenke"
          href="undefined"
        >
          <h2
            className="typo-undertittel"
          >
            <svg
              fill="none"
              height="24"
              style={
                Object {
                  "marginTop": "3px",
                }
              }
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M21.8182 20.3636H2.18182C0.978545 20.3636 0 19.3851 0 18.1818V6.18182C0 4.97855 0.978545 4 2.18182 4H21.8182C23.0215 4 24 4.97855 24 6.18182V18.1818C24 19.3851 23.0215 20.3636 21.8182 20.3636ZM1.14717 5.83571C1.11068 5.94452 1.09091 6.06092 1.09091 6.18182V18.1818C1.09091 18.7829 1.57964 19.2727 2.18182 19.2727H21.8182C22.4204 19.2727 22.9091 18.7829 22.9091 18.1818V6.18182C22.9091 6.06069 22.8892 5.94408 22.8526 5.83508L12.341 14.2444C12.2406 14.323 12.1195 14.3633 11.9995 14.3633C11.8795 14.3633 11.7584 14.323 11.658 14.2444L1.14717 5.83571ZM1.98708 5.1083C2.05028 5.09688 2.11536 5.09091 2.18182 5.09091H21.8182C21.885 5.09091 21.9505 5.09694 22.014 5.1085L11.9995 13.1197L1.98708 5.1083Z"
                fill="#0067C5"
                fillRule="evenodd"
              />
            </svg>
            <span
              className="kommunikasjon-flis-element-tittel"
            >
              Innboks
            </span>
          </h2>
          <p
            className="typo-undertekst"
          >
            Informasjon fra NAV og svar på henvendelser og referater fra samtaler du på telefon, chat og «Skriv til oss».
          </p>
        </a>
      </div>
      
      <div
        className="kommunikasjon-flis-element kommunikasjon-flis-brev-vedtak"
      >
        <a
          className="lenke kommunikasjon-flis-lenke"
          href="undefined"
        >
          <h2
            className="typo-undertittel"
          >
            <svg
              fill="none"
              height="24"
              viewBox="0 0 25 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M23.4334 21H0.633334C0.283734 21 0 20.7163 0 20.3667V2.63333C0 2.28373 0.283734 2 0.633334 2H6.96668C7.13514 2 7.29601 2.06713 7.41508 2.18493L9.76221 4.53334H23.4334C23.783 4.53334 24.0667 4.81707 24.0667 5.16667V20.3667C24.0667 20.7163 23.783 21 23.4334 21ZM1.26623 19.7334H22.7996V5.80007H9.49958C9.33111 5.80007 9.17024 5.73294 9.05118 5.61514L6.70404 3.26673H1.26623V19.7334Z"
                fill="#0067C5"
                fillRule="evenodd"
              />
            </svg>
            <span
              className="kommunikasjon-flis-element-tittel"
            >
              Brev og vedtak
            </span>
          </h2>
          <p
            className="typo-undertekst"
          >
            For deg som ikke har Digipost eller e-Boks.
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;
